# OpenBrief

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: api-spec.md  architecture.md  erd.md
scripts/: build_macos_app.sh  demo_seed.py  preview_seed.py
src/openbrief/: __init__.py  cli.py  config.py  db.py  local_secrets.py  main.py  scheduler.py  schemas.py  security.py  worker.py
src/openbrief/api/: briefs.py  dashboard.py  health.py  projects.py  setup.py  source_items.py  webhooks.py
src/openbrief/briefs/: ai_summarizer.py  service.py  summarizer.py
src/openbrief/connectors/: base.py  discord.py  figma.py  notion.py
src/openbrief/integrations/: __init__.py  discord.py  figma.py  github.py  notion.py
src/openbrief/notifications/: discord.py
src/openbrief/sources/: service.py
src/teampulse/: __init__.py  cli.py  config.py  db.py  main.py  models.py  schemas.py  security.py  worker.py
src/teampulse/api/: briefs.py  dashboard.py  projects.py  setup.py  source_items.py  webhooks.py
tests/: conftest.py  test_ai_summarizer.py  test_api_key_auth.py  test_brief_approval.py  test_brief_summarizer.py  test_briefs_api.py  test_cli.py  test_dashboard.py  test_discord_notifications.py  test_discord_polling.py  test_figma_sync.py  test_figma_webhook.py  test_github_sync.py  test_integration_setup.py  test_notion_sync.py  test_notion_webhook.py  test_scheduler.py  test_source_items_api.py
(+13 files in other folders)
