[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teampulse"
version = "0.1.0"
description = "Team activity automation service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "celery[redis]>=5.4,<6",
  "cryptography>=43,<46",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.7,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/teampulse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]
